hphp/test/slow/nullsafe/nullsafe-prop-9.php.expectf

Fatal error: ?-> is not allowed in write context in %s on line 6
